# HUAWEI-CodeCraft2023

./: .clang-format  .clangd  CMakeLists.txt  count_score.py  map.txt  ploy_trans.py  readme.md  绘制三角面片.py
Robot/: Robot  run_demo_without_gui.sh  run_keyboard_demo.sh  run_simple_demo.sh
Robot/Demo/: SimpleDemo
Robot/maps/: 1.txt.bak  2.txt  3.txt.bak  4.txt.bak
src/: 2.txt  CMakeLists.txt  anticollision.h  args.h  const.h  find_path_squre.h  iointerface.h  main.cpp  map.h  model.h  nav_ear_clipping.h  nav_model.h  nav_navigate.h  navigate.h  route_fool.h  route_stupid.h  stop_die.h  test_triangle.h  trans_map.h
